# DVAProject

./: .gitignore  README.md  pyproject.toml  schema.prisma
.github/workflows/: test_and_format.yml
moving_average/: ratings_moving_average.ipynb  ratings_sentiment_one_plot.py  sentiments_moving_average.ipynb
review_visualizer/app/: init_prisma.py  main.py
review_visualizer/app/moving_average/: ma_average.py
review_visualizer/app/pages/: About.docx  About.py  README.py  example.py  home.py  outputfile.md  overview.py  survey.py
review_visualizer/app/related_products_graph/: network_graph.py
review_visualizer/db/: models.py  models2.py  prisma.py  prisma_og.py  session.py
review_visualizer/sentiment_analysis/: amzn_review_sentiment_analysis.ipynb  review_sentiment_preds.csv
review_visualizer/visualizations/graphs/: example_graph.py  related_products.py
scripts/: migrate_db.py  seed_db.py  seed_db2.py  seed_db3.py  seed_db4.py  seed_db5.py  seed_db6.py
similar_products/: similar_products.ipynb
tests/: test_db.py
